= Release-Notes



== 2.4 (SNAPSHOT)

* viele Fachklassen sind jetzt Comparable
* Unterstützung für Java 8 _und_ 11
* GeldbetragFormatter ist jetzt nur noch für internen Gebrauch gedacht
* Name-Klasse um _equalsSemantic(..)_ ergänzt


== 2.3 (28-Mai-2019)

* #_neu_#: LANR und BSNR um isPseudoNummer() erweitert
* #_neu_#: EMailAdresse um getName() erweitert


== 2.2 (26-Feb-2019)

* *v2.2.3* _fixed_ https://github.com/oboehm/jfachwert/issues/7[#7]#: Validierung für Rechnungsmonat vervollständigt
* *v2.2.3*: SmallUUID als Alternative zu TinyUUID hinzugefügt
* *v2.2.2* _fixed_: ArrayIndexOutOfBoundException im Adressvergleich behoben.
* *v2.2.2*: Text.replaceUmlaute() ist jetzt um Faktor 4 schneller
* *v2.2.1*: Adressvergleich kommt jetzt mit mehr Sonderfällen klar
* *v2.2.1*: Namensvergleich funktioniert jetzt auch mit unterschiedlicher Anzahl von Vornamen besser
* #_neu_#: NULL-Objekte für die Initialisierung von Variablen
* Architektur-Dokumentation aktualisert
* Text-Klasse um `equalsIgnore`...`Umlaute(..)` ergänzt 


== 2.1 (20-Feb-2019)

* Logischer Vergleich bei Klassen im post-Package:
  Beim Vergleich von Adresse Ort und Strasse müssen sie nicht mehr exakt uebereinstimmen.
  So werden "73730 Esslingen, Badstr. 5" und "73730 Esslingen/N, Badstrasse 5" als die gleiche Adresse angesehen.
  _Achtung_: dieses Verhalte ist bis Version 2.0 anders - hier muss die Adresse exakt übereinstimmen.
* Will man den Vergleich exakt, gibt es dazu in diesen Klassen eine "equalsExact"-Methode.


== 2.0 (9-Feb-2019)

* Fachwerte mit String-Attributen wurden überarbeitet, um den Speicherbedarf zu reduzieren (Vermeidung von String-Duplikaten)
* beim Aufruf der of()-Methode werden Duplikate ebenfalls vermieden
* #_neu_#: formular-Package
* Methoden, die als @deprecated gekennzeichnet sind, wurden entfernt.



== 1.1 (16-Dez-2018)

* med-Package für Klassen aus dem Krankenkassen-Bereich eingeführt