@@ -9,6 +9,10 @@
 * GeldbetragFormatter ist jetzt nur noch für internen Gebrauch gedacht
 * Name-Klasse um _equalsSemantic(..)_ ergänzt
 
+NOTE: Die _equals_-Methode in Name verwendet intern _equalsSemantic(..)_.
+Dies kann sich in künftigen Versionen ändern.
+Von daher sollte man statt _equals_(..) besser _equalsSemantic(..)_ oder _equalsExact(..)_ verwenden, je nachdem, welche Variante gewünscht ist.
+
 
 == 2.3 (28-Mai-2019)
 
